[gd_scene load_steps=8 format=2]

[ext_resource path="res://TopDownShootGame/Common/Explosive.tscn" type="PackedScene" id=1]
[ext_resource path="res://NixLib/Common/Effect2DGenerator.gd" type="Script" id=2]
[ext_resource path="res://NixLib/Shoot/homing.gd" type="Script" id=3]
[ext_resource path="res://TopDownShootGame/Image/Projectile/towerDefense_tile252.png" type="Texture" id=4]
[ext_resource path="res://NixLib/Common/UnitLife.gd" type="Script" id=5]
[ext_resource path="res://TopDownShootGame/Projectile/fx_trail.tscn" type="PackedScene" id=6]




[sub_resource type="CapsuleShape2D" id=1]
radius = 5.22631
height = 28.8139

[node name="projectile" type="Area2D"]
input_pickable = false
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="FX_Trail" parent="." instance=ExtResource( 6 )]
position = Vector2( -20.921, 0 )
visibility_rect = Rect2( -75, -25, 100, 50 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Effect2DGenerator" type="Node2D" parent="."]
script = ExtResource( 2 )
efx = ExtResource( 1 )

[node name="UnitLife" type="Node" parent="."]
script = ExtResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_projectile_body_entered"]
[connection signal="dead" from="UnitLife" to="Effect2DGenerator" method="Play"]
